--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,5 +1,5 @@
 ---
-layouts/default.njk
+layout: layouts/default.njk
 title: Blog
 description: Blogs and Tips on Life, Web Development, Demand Gen, and Marketing.
 pagination:
