--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: layouts/default.njk
 title: Blog
 description: Blogs and Tips on Life, Web Development, Demand Gen, and Marketing.
 pagination:
-    data: collections.posts
-    size: 1000
-    alias: posts
+  data: collections.posts
+  size: 9
+  alias: blog
 ---
 
 <main>
@@ -56,47 +56,35 @@ pagination:
             </article>
           </div>
         {% endfor %}
-
-        {% if pagination.hrefs | length > 1 %}
-          <nav class="blog-pagination w-100 mt-4">
-            <ul class="pagination justify-content-center">
-              {% if pagination.href.previous %}
-                <li class="page-item">
-                  <a class="page-link btn btn-secondary" href="{{ pagination.href.previous }}" aria-label="Previous page">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20.657" height="11.314" viewBox="0 0 20.657 11.314" style="transform: scale(-1, 1)">
-                      <g fill="#fff" data-name="Group 12">
-                        <path d="M0 4.657h18v2H0z" data-name="Rectangle 2400"></path>
-                        <path d="M13.586 9.9l5.6568542-5.6568542 1.4142136 1.4142135-5.6568542 5.6568543z" data-name="Rectangle 2401"></path>
-                        <path d="M15 0l5.6568542 5.6568542-1.4142135 1.4142136-5.6568543-5.6568542z" data-name="Rectangle 2402"></path>
-                      </g>
-                    </svg>
-                  </a>
-                </li>
-              {% endif %}
-              {% for pageEntry in pagination.hrefs %}
-                <li class="page-item">
-                  <a class="page-link btn btn-secondary {% if page.url == pageEntry %}active{% endif %}" href="{{ pageEntry }}">
-                    {{ loop.index }}
-                  </a>
-                </li>
-              {% endfor %}
-              {% if pagination.href.next %}
-                <li class="page-item">
-                  <a class="page-link btn btn-secondary" href="{{ pagination.href.next }}" aria-label="Next page">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20.657" height="11.314" viewBox="0 0 20.657 11.314">
-                      <g fill="#fff" data-name="Group 12">
-                        <path d="M0 4.657h18v2H0z" data-name="Rectangle 2400"></path>
-                        <path d="M13.586 9.9l5.6568542-5.6568542 1.4142136 1.4142135-5.6568542 5.6568543z" data-name="Rectangle 2401"></path>
-                        <path d="M15 0l5.6568542 5.6568542-1.4142135 1.4142136-5.6568543-5.6568542z" data-name="Rectangle 2402"></path>
-                      </g>
-                    </svg>
-                  </a>
-                </li>
-              {% endif %}
-            </ul>
-          </nav>
-        {% endif %}
       </div>
+
+      {% if pagination.hrefs | length > 1 %}
+        <nav class="blog-pagination w-100 mt-4">
+          <ul class="pagination justify-content-center">
+            {% if pagination.href.previous %}
+              <li class="page-item">
+                <a class="page-link btn btn-secondary" href="{{ pagination.href.previous }}" aria-label="Previous page">
+                  &laquo;
+                </a>
+              </li>
+            {% endif %}
+            {% for pageEntry in pagination.hrefs %}
+              <li class="page-item">
+                <a class="page-link btn btn-secondary {% if page.url == pageEntry %}active{% endif %}" href="{{ pageEntry }}">
+                  {{ loop.index }}
+                </a>
+              </li>
+            {% endfor %}
+            {% if pagination.href.next %}
+              <li class="page-item">
+                <a class="page-link btn btn-secondary" href="{{ pagination.href.next }}" aria-label="Next page">
+                  &raquo;
+                </a>
+              </li>
+            {% endif %}
+          </ul>
+        </nav>
+      {% endif %}
     </div>
   </section>
 </main>
